# procimagsen-seaanimals-cnn

./: .gitignore  pyproject.toml  ruff.toml
src/cnn_animales_marinos/: 103-sea-animals-image-classification.ipynb  __init__.py  sea-animals-classification.ipynb
