[project]
name = "cnn-animales-marinos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ezequiel Saidman", email = "ezequiel.saidman@chevron.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "keras<=3.10.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
]

[project.scripts]
cnn-animales-marinos = "cnn_animales_marinos:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
